- fixed modal text scrollbars issue on Windows

--- a/Spixi/Resources/Raw/html/css/spixiui-dark.css
+++ b/Spixi/Resources/Raw/html/css/spixiui-dark.css
@@ -3363,7 +3363,7 @@ img.emoji {
     padding-bottom: 8px;
     min-height: 100px;
     color: var(--colors-text-01);
-    overflow: scroll;
+    overflow: auto;
     word-break: break-all;
     overflow-wrap: anywhere;
 }
