--- a/Spixi/Resources/Raw/html/css/spixiui-light.css
+++ b/Spixi/Resources/Raw/html/css/spixiui-light.css
@@ -3344,7 +3344,7 @@ img.emoji {
     padding-bottom: 8px;
     min-height: 100px;
     color: var(--colors-text-01);
-    overflow: scroll;
+    overflow: auto;
     word-break: break-all;
     overflow-wrap: anywhere;
 }
